--- a/index.html
+++ b/index.html
@@ -6,11 +6,17 @@
 <body>
   <div class="title">
     <div class="logo">
-      <!-- Add AWS service logos -->
+      <img src="Img/AWS-logo1.jpeg" alt="AWS Logo">
     </div>
     <div class="details">
-      <p>Name: Vamsi Raja Reddy</p>
+      <p>Name: Vamsi Reddy</p>
     </div>
+  </div>
+
+  <div class="centered-content">
+    <p>Welcome to AWS Services Documentation</p>
+    <p>Be part of my AWS data engineering</p>
+    <!-- Add more lines here -->
   </div>
 </body>
 </html>
