--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
 <body>
   <div class="title">
     <div class="logo">
-      <img src="Img/AWS-logo1.jpeg" alt="AWS Logo">
+      <img src="Img/maxresdefault.jpg" alt="AWS Logo" width="400" height="400">
     </div>
     <div class="details">
-      <p>Name: Vamsi Reddy</p>
+      <p class="name">Name: Vamsi Reddy</p>
     </div>
   </div>
 
